--- a/chatchat-server/chatchat/configs/basic_config.py.example
+++ b/chatchat-server/chatchat/configs/basic_config.py.example
@@ -12,12 +12,12 @@ langchain.verbose = False
 # 通常情况下不需要更改以下内容
 
 # 用户数据根目录
-DATA_PATH = (Path(__file__).absolute().parent.parent) # / "data")
+DATA_PATH = str(Path(__file__).absolute().parent.parent / "data")
 if not os.path.exists(DATA_PATH):
     os.mkdir(DATA_PATH)
 
 # nltk 模型存储路径
-NLTK_DATA_PATH = os.path.join(DATA_PATH, "data/nltk_data")
+NLTK_DATA_PATH = os.path.join(DATA_PATH, "nltk_data")
 import nltk
 nltk.data.path = [NLTK_DATA_PATH] + nltk.data.path
 
@@ -29,12 +29,12 @@ logging.basicConfig(format=LOG_FORMAT)
 
 
 # 日志存储路径
-LOG_PATH = os.path.join(DATA_PATH, "data/logs")
+LOG_PATH = os.path.join(DATA_PATH, "logs")
 if not os.path.exists(LOG_PATH):
     os.mkdir(LOG_PATH)
 
 # 模型生成内容（图片、视频、音频等）保存位置
-MEDIA_PATH = os.path.join(DATA_PATH, "data/media")
+MEDIA_PATH = os.path.join(DATA_PATH, "media")
 if not os.path.exists(MEDIA_PATH):
     os.mkdir(MEDIA_PATH)
     os.mkdir(os.path.join(MEDIA_PATH, "image"))
@@ -42,6 +42,6 @@ if not os.path.exists(MEDIA_PATH):
     os.mkdir(os.path.join(MEDIA_PATH, "video"))
 
 # 临时文件目录，主要用于文件对话
-BASE_TEMP_DIR = os.path.join(DATA_PATH, "data/temp")
+BASE_TEMP_DIR = os.path.join(DATA_PATH, "temp")
 if not os.path.exists(BASE_TEMP_DIR):
     os.mkdir(BASE_TEMP_DIR)
