--- a/chatchat-server/pyproject.toml
+++ b/chatchat-server/pyproject.toml
@@ -57,18 +57,14 @@ optional = true
 # dependencies used for running tests (e.g., pytest, freezegun, response).
 # Any dependencies that do not meet that criteria will be removed.
 pytest = "^7.3.0"
-pytest-cov = "^4.0.0"
-pytest-dotenv = "^0.5.2"
-duckdb-engine = "^0.7.0"
-pytest-watcher = "^0.2.6"
 freezegun = "^1.2.2"
-responses = "^0.22.0"
-pytest-asyncio = "^0.20.3"
-lark = "^1.1.5"
-pandas = "^2.0.0"
-pytest-mock  = "^3.10.0"
-pytest-socket = "^0.6.0"
+pytest-mock = "^3.10.0"
 syrupy = "^4.0.2"
+pytest-watcher = "^0.3.4"
+pytest-asyncio = "^0.21.1"
+grandalf = "^0.8"
+pytest-profiling = "^1.7.0"
+responses = "^0.25.0"
 model-providers = { path = "../model-providers", develop = true }
 
 
