兼容model_providers，集成webui及API中平台配置的初始化 (#3625)
* provider_configuration init of MODEL_PLATFORMS

* 开发手册

* 兼容model_providers，集成webui及API中平台配置的初始化

--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,4 @@ configs/*.py
 /chatchat/configs/*.py
 /chatchat/configs/*.yaml
 chatchat/data
+/chatchat-server/chatchat/configs/model_providers.yaml
