--- a/chatchat-server/chatchat/configs/model_config.py.example
+++ b/chatchat-server/chatchat/configs/model_config.py.example
@@ -1,6 +1,5 @@
 import os
 
-
 # 默认选用的 LLM 名称
 DEFAULT_LLM_MODEL = "chatglm3-6b"
 
@@ -31,7 +30,7 @@ SUPPORT_AGENT_MODELS = [
 
 
 LLM_MODEL_CONFIG = {
-# 意图识别不需要输出，模型后台知道就行
+    # 意图识别不需要输出，模型后台知道就行
     "preprocess_model": {
         DEFAULT_LLM_MODEL: {
             "temperature": 0.05,
@@ -57,7 +56,7 @@ LLM_MODEL_CONFIG = {
             "prompt_name": "ChatGLM3",
             "callbacks": True
         },
-            },
+    },
     "postprocess_model": {
         DEFAULT_LLM_MODEL: {
             "temperature": 0.01,
@@ -76,47 +75,15 @@ LLM_MODEL_CONFIG = {
     },
 }
 
-# 可以通过 loom/xinference/oneapi/fastchat 启动模型服务，然后将其 URL 和 KEY 配置过来即可。
+# 可以通过 model_providers 提供转换不同平台的接口为openai endpoint的能力，启动后下面变量会自动增加相应的平台
+#   ### 如果您已经有了一个openai endpoint的能力的地址，可以在这里直接配置
 #   - platform_name 可以任意填写，不要重复即可
-#   - platform_type 可选：openai, xinference, oneapi, fastchat。以后可能根据平台类型做一些功能区分
+#   - platform_type 以后可能根据平台类型做一些功能区分,与platform_name一致即可
 #   - 将框架部署的模型填写到对应列表即可。不同框架可以加载同名模型，项目会自动做负载均衡。
 
-MODEL_PLATFORMS = [
-    # {
-    #     "platform_name": "openai-api",
-    #     "platform_type": "openai",
-    #     "api_base_url": "https://api.openai.com/v1",
-    #     "api_key": "sk-",
-    #     "api_proxy": "",
-    #     "api_concurrencies": 5,
-    #     "llm_models": [
-    #         "gpt-3.5-turbo",
-    #     ],
-    #     "embed_models": [],
-    #     "image_models": [],
-    #     "multimodal_models": [],
-    # },
 
-    {
-        "platform_name": "xinference",
-        "platform_type": "xinference",
-        "api_base_url": "http://127.0.0.1:9997/v1",
-        "api_key": "EMPTY",
-        "api_concurrencies": 5,
-        # 注意：这里填写的是 xinference 部署的模型 UID，而非模型名称
-        "llm_models": [
-            "chatglm3-6b",
-        ],
-        "embed_models": [
-            "bge-large-zh-v1.5",
-        ],
-        "image_models": [
-            "sd-turbo",
-        ],
-        "multimodal_models": [
-            "qwen-vl",
-        ],
-    },
+# 创建一个全局的共享字典
+MODEL_PLATFORMS = [
 
     {
         "platform_name": "oneapi",
@@ -152,41 +119,13 @@ MODEL_PLATFORMS = [
         "multimodal_models": [],
     },
 
-    {
-        "platform_name": "ollama",
-        "platform_type": "ollama",
-        "api_base_url": "http://{host}:{port}/v1",
-        "api_key": "sk-",
-        "api_concurrencies": 5,
-        "llm_models": [
-            # Qwen API,其它更多模型请参考https://ollama.com/library
-            "qwen:7b",
-        ],
-        "embed_models": [
-            # 必须升级ollama到0.1.29以上，低版本向量服务有问题
-            "nomic-embed-text"
-        ],
-        "image_models": [],
-        "multimodal_models": [],
-    },
 
-    # {
-    #     "platform_name": "loom",
-    #     "platform_type": "loom",
-    #     "api_base_url": "http://127.0.0.1:7860/v1",
-    #     "api_key": "",
-    #     "api_concurrencies": 5,
-    #     "llm_models": [
-    #         "chatglm3-6b",
-    #     ],
-    #     "embed_models": [],
-    #     "image_models": [],
-    #     "multimodal_models": [],
-    # },
 ]
 
-LOOM_CONFIG = os.path.join(os.path.dirname(os.path.abspath(__file__)), "loom.yaml")
+MODEL_PROVIDERS_CFG_PATH_CONFIG = os.path.join(os.path.dirname(os.path.abspath(__file__)), "model_providers.yaml")
+MODEL_PROVIDERS_CFG_HOST = "127.0.0.1"
 
+MODEL_PROVIDERS_CFG_PORT = 20000
 # 工具配置项
 TOOL_CONFIG = {
     "search_local_knowledgebase": {
