--- a/chatchat-server/pyproject.toml
+++ b/chatchat-server/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["chatchat"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0,!=3.9.7"
+python = ">=3.8.1,<3.12,!=3.9.7"
 model-providers = "^0.3.0"
 langchain = "0.1.5"
 langchainhub = "0.1.14"
@@ -44,7 +44,7 @@ python-multipart = "0.0.9"
 streamlit = "1.30.0"
 streamlit-option-menu = "0.3.12"
 streamlit-antd-components = "0.3.1"
-streamlit-chatbox = "1.1.11"
+streamlit-chatbox = "1.1.12"
 streamlit-modal = "0.1.0"
 streamlit-aggrid = "0.3.4.post3"
 
@@ -235,3 +235,10 @@ ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
 # aapply - async apply
 # unsecure - typo but part of API, decided to not bother for now
 ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin'
+
+
+# https://python-poetry.org/docs/repositories/
+[[tool.poetry.source]]
+name = "tsinghua"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+priority = "default"
