--- a/model-providers/pyproject.toml
+++ b/model-providers/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["glide-the <2533736852@qq.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0,!=3.9.7"
+python = ">=3.8.1,<3.12,!=3.9.7"
 transformers = "4.31.0"
 fastapi = "^0.109.2"
 uvicorn = ">=0.27.0.post1"
@@ -198,3 +198,10 @@ ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
 # aapply - async apply
 # unsecure - typo but part of API, decided to not bother for now
 ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin'
+
+
+# https://python-poetry.org/docs/repositories/
+[[tool.poetry.source]]
+name = "tsinghua"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+priority = "default"
