--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/chatchat-space/Langchain-Chatchat.git"
 
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0,!=3.9.7"
+python = ">=3.8.1,<3.12,!=3.9.7"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -46,3 +46,9 @@ extend-exclude = [
 "cookbook/gymnasium_agent_simulation.ipynb" = ["F821"]
 "docs/docs/integrations/document_loaders/tensorflow_datasets.ipynb" = ["F821"]
 
+
+# https://python-poetry.org/docs/repositories/
+[[tool.poetry.source]]
+name = "tsinghua"
+url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
+priority = "default"
