泛型标记错误 (#3855)
* 仓库设置，一些版本问题

* pip源仓库设置，一些版本问题，启动说明

* 配置说明

* 发布的依赖信息

* 泛型标记错误

--- a/chatchat-server/pyproject.toml
+++ b/chatchat-server/pyproject.toml
@@ -5,6 +5,9 @@ description = ""
 authors = ["chatchat"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+chatchat = 'chatchat.startup:main'
+
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12,!=3.9.7"
 model-providers = "^0.3.0"
