--- a/model-providers/pyproject.toml
+++ b/model-providers/pyproject.toml
@@ -21,21 +21,25 @@ openai = "1.13.3"
 tiktoken = "0.5.2"
 pydub = "0.25.1"
 boto3 = "1.28.17"
+
 [tool.poetry.group.test.dependencies]
 # The only dependencies that should be added are
 # dependencies used for running tests (e.g., pytest, freezegun, response).
 # Any dependencies that do not meet that criteria will be removed.
 pytest = "^7.3.0"
+pytest-cov = "^4.0.0"
+pytest-dotenv = "^0.5.2"
+duckdb-engine = "^0.9.2"
+pytest-watcher = "^0.2.6"
 freezegun = "^1.2.2"
-pytest-mock = "^3.10.0"
+responses = "^0.22.0"
+pytest-asyncio = "^0.23.2"
+lark = "^1.1.5"
+pandas = "^2.0.0"
+pytest-mock  = "^3.10.0"
+pytest-socket = "^0.6.0"
 syrupy = "^4.0.2"
-pytest-watcher = "^0.3.4"
-pytest-asyncio = "^0.21.1"
-grandalf = "^0.8"
-pytest-profiling = "^1.7.0"
-responses = "^0.25.0"
-langchain = "0.1.5"
-langchain-openai = "0.0.5"
+requests-mock = "^1.11.0"
 
 [tool.poetry.group.lint]
 optional = true
