--- a/chatchat-server/chatchat/configs/basic_config.py.example
+++ b/chatchat-server/chatchat/configs/basic_config.py.example
@@ -11,8 +11,11 @@ langchain.verbose = False
 
 # 通常情况下不需要更改以下内容
 
+# chatchat 项目根目录
+CHATCHAT_ROOT = str(Path(__file__).absolute().parent.parent)
+
 # 用户数据根目录
-DATA_PATH = str(Path(__file__).absolute().parent.parent / "data")
+DATA_PATH = os.path.join(CHATCHAT_ROOT, "data")
 if not os.path.exists(DATA_PATH):
     os.mkdir(DATA_PATH)
 
