--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "Langchain-Chatchat"
+name = "Chatchat"
 version = "0.3.0"
 description = "Langchain-Chatchat"
 authors = ["chatchat"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/chatchat-space/Langchain-Chatchat.git"
-
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12,!=3.9.7"
@@ -15,13 +15,13 @@ python = ">=3.8.1,<3.12,!=3.9.7"
 [tool.poetry.group.lint.dependencies]
 ruff = "^0.1.5"
 model-providers = { path = "model-providers", develop = true }
-chatchat = { path = "chatchat-server", develop = true }
+langchain-chatchat = { path = "chatchat-server", develop = true }
 
 
 
 [tool.poetry.group.dev.dependencies]
 model-providers = { path = "model-providers", develop = true }
-chatchat = { path = "chatchat-server", develop = true }
+langchain-chatchat = { path = "chatchat-server", develop = true }
 ipykernel = "^6.29.2"
 
 [tool.poetry.group.test.dependencies]
