--- a/chatchat-server/pyproject.toml
+++ b/chatchat-server/pyproject.toml
@@ -53,7 +53,7 @@ streamlit-antd-components = "0.3.1"
 streamlit-chatbox = "1.1.12"
 streamlit-modal = "0.1.0"
 streamlit-aggrid = "0.3.4.post3"
-
+streamlit-extras = "0.4.2"
 
 [tool.poetry.group.test]
 optional = true
