--- a/chatchat-server/pyproject.toml
+++ b/chatchat-server/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "langchain-chatchat"
-version = "0.3.0"
+version = "0.3.0.20240506"
 description = ""
 authors = ["chatchat"]
 readme = "README.md"
