--- a/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/chatchat-server/chatchat/configs/model_providers.yaml
@@ -32,6 +32,7 @@ ollama:
       model_type: 'llm'
       model_credentials:
         base_url: 'http://172.21.80.1:11434'
+        mode: 'completion'
 
 
 
