--- a/model-providers/model_providers/core/model_runtime/model_providers/deepseek/deepseek.yaml
+++ b/model-providers/model_providers/core/model_runtime/model_providers/deepseek/deepseek.yaml
@@ -15,6 +15,7 @@ help:
 supported_model_types:
   - llm
 configurate_methods:
+  - predefined-model
   - customizable-model
 model_credential_schema:
   model:
@@ -24,6 +25,25 @@ model_credential_schema:
     placeholder:
       en_US: Enter your model name
       zh_Hans: 输入模型名称
+  credential_form_schemas:
+    - variable: api_key
+      label:
+        en_US: API Key
+      type: secret-input
+      required: true
+      placeholder:
+        zh_Hans: 在此输入您的 API Key
+        en_US: Enter your API Key
+    - variable: base_url
+      label:
+        zh_Hans: API Base
+        en_US: API Base
+      type: text-input
+      required: false
+      placeholder:
+        zh_Hans: 在此输入您的 API Base
+        en_US: Enter your API Base
+provider_credential_schema:
   credential_form_schemas:
     - variable: api_key
       label:
