--- a/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/chatchat-server/chatchat/configs/model_providers.yaml
@@ -25,6 +25,11 @@ xinference:
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'chatglm3-6b'
+    - model: 'bge-m3'
+      model_type: 'embeddings'
+      model_credentials:
+        server_url: 'http://127.0.0.1:9997/'
+        model_uid: 'bge-m3'
 
 ollama:
   model_credential:
