--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -63,14 +63,18 @@ optional = true
 # dependencies used for running tests (e.g., pytest, freezegun, response).
 # Any dependencies that do not meet that criteria will be removed.
 pytest = "^7.3.0"
+pytest-cov = "^4.0.0"
+pytest-dotenv = "^0.5.2"
+duckdb-engine = "^0.9.2"
+pytest-watcher = "^0.2.6"
 freezegun = "^1.2.2"
+responses = "^0.22.0"
+pytest-asyncio = "^0.23.2"
+lark = "^1.1.5"
 pytest-mock = "^3.10.0"
+pytest-socket = "^0.6.0"
 syrupy = "^4.0.2"
-pytest-watcher = "^0.3.4"
-pytest-asyncio = "^0.21.1"
-grandalf = "^0.8"
-pytest-profiling = "^1.7.0"
-responses = "^0.25.0"
+requests-mock = "^1.11.0"
 model-providers = { path = "../model-providers", develop = true }
 
 
@@ -241,6 +245,10 @@ ignore-regex = '.*(Stati Uniti|Tense=Pres).*'
 # aapply - async apply
 # unsecure - typo but part of API, decided to not bother for now
 ignore-words-list = 'momento,collison,ned,foor,reworkd,parth,whats,aapply,mysogyny,unsecure,damon,crate,aadd,symbl,precesses,accademia,nin'
+
+[tool.poetry.plugins.dotenv]
+ignore = "false"
+location = ".env"
 
 
 # https://python-poetry.org/docs/repositories/
