--- a/libs/model-providers/model_providers.yaml
+++ b/libs/model-providers/model_providers.yaml
@@ -25,9 +25,20 @@ xinference:
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'chatglm3-6b'
-
+    - model: 'bge-large-zh-v1.5'
+      model_type: 'text-embedding'
+      model_credentials:
+        server_url: 'http://127.0.0.1:9997/'
+        model_uid: 'bge-large-zh-v1.5'
 
 zhipuai:
-
   provider_credential:
     api_key: 'd4fa0690b6dfa205204cae2e12aa6fb6.1'
+
+ollama:
+  model_credential:
+    - model: 'llama3'
+      model_type: 'llm'
+      model_credentials:
+        base_url: 'http://172.21.192.1:11434'
+        mode: 'completion'
