fix: 补充 xinference 配置信息 (#4123)
* feat:README

* feat:补充 xinference 平台 llm 和 embedding 模型配置.

---------

Co-authored-by: yuehuazhang <yuehuazhang@tencent.com>

--- a/libs/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/libs/chatchat-server/chatchat/configs/model_providers.yaml
@@ -25,8 +25,13 @@ xinference:
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'chatglm3-6b'
+    - model: 'Qwen1.5-14B-Chat'
+      model_type: 'llm'
+      model_credentials:
+        server_url: 'http://127.0.0.1:9997/'
+        model_uid: 'Qwen1.5-14B-Chat'
     - model: 'bge-large-zh-v1.5'
-      model_type: 'text-embedding'
+      model_type: 'embeddings'
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'bge-large-zh-v1.5'
