优化知识库相关功能 (#4153)
- 新功能
    - pypi 包新增 chatchat-kb 命令脚本，对应 init_database.py 功能

- 开发者
    - _model_config.py 中默认包含 xinference 配置项
    - 所有涉及向量库的操作，前置检查当前 Embed 模型是否可用
    - /knowledge_base/create_knowledge_base 接口增加 kb_info 参数
    - /knowledge_base/list_files 接口返回所有数据库字段，而非文件名称列表
    - 修正 xinference 模型管理脚本

--- a/libs/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/libs/chatchat-server/chatchat/configs/model_providers.yaml
@@ -20,16 +20,16 @@
 
 xinference:
   model_credential:
-    - model: 'chatglm3-6b'
+    - model: 'glm-4'
       model_type: 'llm'
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
-        model_uid: 'chatglm3-6b'
-    - model: 'Qwen1.5-14B-Chat'
+        model_uid: 'glm-4'
+    - model: 'qwen1.5-chat'
       model_type: 'llm'
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
-        model_uid: 'Qwen1.5-14B-Chat'
+        model_uid: 'qwen1.5-chat'
     - model: 'bge-large-zh-v1.5'
       model_type: 'embeddings'
       model_credentials:
