--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 
 [tool.poetry.scripts]
 chatchat = 'chatchat.startup:main'
+chatchat-kb = 'chatchat.init_database:main'
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12,!=3.9.7"
