--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -20,7 +20,7 @@ langchainhub = "0.1.14"
 langchain-community = "0.0.17"
 langchain-openai = "0.0.5"
 langchain-experimental = "0.0.50"
-fastapi = "0.109.2"
+fastapi = "~0.109.2"
 sse_starlette = "~1.8.2"
 nltk = "~3.8.1"
 uvicorn = ">=0.27.0.post1"
@@ -35,16 +35,16 @@ rapidocr_onnxruntime = "~1.3.8"
 requests = "~2.31.0"
 pathlib = "~1.0.1"
 pytest = "~7.4.3"
-pyjwt = "2.8.0"
+pyjwt = "~2.8.0"
 elasticsearch = "*"
 numexpr = ">=1" #test
 strsimpy = ">=0.2.1"
 markdownify = ">=0.11.6"
 tqdm = ">=4.66.1"
 websockets = ">=12.0"
-numpy = "1.24.4"
+numpy = "~1.24.4"
 pandas = "~1" # test
-pydantic = "2.6.4"
+pydantic = "~2.6.4"
 httpx = {version = ">=0.25.2", extras = ["brotli", "http2", "socks"]}
 python-multipart = "0.0.9"
 # webui
