--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -15,11 +15,11 @@ chatchat-kb = 'chatchat.init_database:main'
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12,!=3.9.7"
 model-providers = "^0.3.0"
-langchain = "0.1.5"
+langchain = "0.1.17"
 langchainhub = "0.1.14"
-langchain-community = "0.0.17"
+langchain-community = "0.0.36"
 langchain-openai = "0.0.5"
-langchain-experimental = "0.0.50"
+langchain-experimental = "0.0.58"
 fastapi = "~0.109.2"
 sse_starlette = "~1.8.2"
 nltk = "~3.8.1"
@@ -51,12 +51,13 @@ python-multipart = "0.0.9"
 streamlit = "1.34.0"
 streamlit-option-menu = "0.3.12"
 streamlit-antd-components = "0.3.1"
-streamlit-chatbox = "1.1.12"
+streamlit-chatbox = "1.1.12.post2"
 streamlit-modal = "0.1.0"
 streamlit-aggrid = "0.3.4.post3"
 streamlit-extras = "0.4.2"
 xinference_client = { version = "^0.11.1", optional = true }
 zhipuai = { version = "^2.1.0", optional = true }
+pymysql = "^1.1.0"
 
 [tool.poetry.extras]
 xinference = ["xinference_client"]
