--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -16,10 +16,10 @@ chatchat-config = 'chatchat.config_work_space:main'
 [tool.poetry.dependencies]
 python = ">=3.8.1,<3.12,!=3.9.7"
 model-providers = "^0.3.0"
-langchain = "0.1.17"
+langchain = { version = "0.1.17", python = ">=3.8.1,<3.12,!=3.9.7" }
 langchainhub = "0.1.14"
 langchain-community = "0.0.36"
-langchain-openai = "0.0.5"
+langchain-openai = { version = "0.0.5", python = ">=3.8.1,<3.12,!=3.9.7" }
 langchain-experimental = "0.0.58"
 fastapi = "~0.109.2"
 sse_starlette = "~1.8.2"
