--- a/libs/model-providers/pyproject.toml
+++ b/libs/model-providers/pyproject.toml
@@ -17,7 +17,7 @@ pydantic ="~2.6.4"
 omegaconf = "~2.0.6"
 # modle_runtime
 openai = "~1.13.3"
-tiktoken = "~0.7.0"
+tiktoken = ">=0.5.2"
 pydub = "~0.25.1"
 boto3 = "~1.28.17"
 
@@ -39,7 +39,8 @@ pytest-mock = "^3.10.0"
 pytest-socket = "^0.6.0"
 syrupy = "^4.0.2"
 requests-mock = "^1.11.0"
-langchain = { version = "0.1.5", python = ">=3.8.1,<3.12,!=3.9.7" }
+
+langchain = { version = "0.1.17", python = ">=3.8.1,<3.12,!=3.9.7" }
 langchain-openai = { version = "0.0.5", python = ">=3.8.1,<3.12,!=3.9.7" }
 
 [tool.poetry.group.lint]
