provider_model_record model_credentials初始化问题

--- a/libs/model-providers/tests/unit_tests/xinference/model_providers.yaml
+++ b/libs/model-providers/tests/unit_tests/xinference/model_providers.yaml
@@ -6,6 +6,7 @@ xinference:
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'chatglm3-6b'
+        completion_type: 'chat'
     - model: 'bge-m3'
       model_type: 'embeddings'
       completion_type: 'embeddings'
