--- a/libs/model-providers/tests/integration_tests/xinference_providers_test/model_providers.yaml
+++ b/libs/model-providers/tests/integration_tests/xinference_providers_test/model_providers.yaml
@@ -7,6 +7,7 @@ xinference:
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'chatglm3-6b'
+        completion_type: 'chat'
 
     - model: 'chatglm31-6b'
       model_type: 'llm'
