--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -57,7 +57,7 @@ streamlit-option-menu = "0.3.12"
 streamlit-antd-components = "0.3.1"
 streamlit-chatbox = "1.1.12.post2"
 streamlit-modal = "0.1.0"
-streamlit-aggrid = "0.3.4.post3"
+streamlit-aggrid = "1.0.5"
 streamlit-extras = "0.4.2"
 xinference_client = { version = "^0.11.1", optional = true }
 zhipuai = { version = "^2.1.0", optional = true }
