change default llm to glm4-chat; add default xinference platform

--- a/libs/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/libs/chatchat-server/chatchat/configs/model_providers.yaml
@@ -1,11 +1,11 @@
 
 xinference:
   model_credential:
-    - model: 'autodl-tmp-glm-4-9b-chat'
+    - model: 'glm4-chat'
       model_type: 'llm'
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
-        model_uid: 'autodl-tmp-glm-4-9b-chat'
+        model_uid: 'glm4-chat'
         completion_type: 'chat'
     - model: 'bge-large-zh-v1.5'
       model_type: 'embeddings'
