--- a/libs/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/libs/chatchat-server/chatchat/configs/model_providers.yaml
@@ -31,7 +31,7 @@ xinference:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'qwen1.5-chat'
     - model: 'bge-large-zh-v1.5'
-      model_type: 'embeddings'
+      model_type: 'text-embedding'
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
         model_uid: 'bge-large-zh-v1.5'
