add Readme English

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 !/libs/chatchat-server/chatchat/data/knowledge_base/samples
 /libs/chatchat-server/chatchat/data/knowledge_base/samples/vector_store
 !/libs/chatchat-server/chatchat/data/nltk_data
+/libs/chatchat-server/chatchat/config/*
 
 .vscode/
 
