--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
     paths-ignore:
-      - 'README.md'
+      - 'README_en.md'
       - 'README_en.md'
       - 'README_ja.md'
 env:
@@ -140,7 +140,7 @@ jobs:
 #        with:
 #          username: ${{ secrets.DOCKERHUB_USERNAME }}
 #          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Update README.md
+      - name: Update README_en.md
         run: |
           sed -i "s|uswccr.ccs.tencentyun.com/chatchat/chatchat:[^ ]*|uswccr.ccs.tencentyun.com/chatchat/chatchat:${{ steps.imageTag.outputs.image_tag }}|g" README.md
           sed -i "s|uswccr.ccs.tencentyun.com/chatchat/chatchat:[^ ]*|uswccr.ccs.tencentyun.com/chatchat/chatchat:${{ steps.imageTag.outputs.image_tag }}|g" README_en.md
@@ -148,7 +148,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git commit -am "feat:update docker image:tag"
-      - name: Push README.md
+      - name: Push README_en.md
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GH_PAT }}
