--- a/libs/chatchat-server/chatchat/configs/model_providers.yaml
+++ b/libs/chatchat-server/chatchat/configs/model_providers.yaml
@@ -20,16 +20,16 @@
 
 xinference:
   model_credential:
-    - model: 'glm-4'
+    - model: 'glm4-chat'
       model_type: 'llm'
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
-        model_uid: 'glm-4'
-    - model: 'qwen1.5-chat'
+        model_uid: 'glm4-chat'
+    - model: 'qwen2-instruct'
       model_type: 'llm'
       model_credentials:
         server_url: 'http://127.0.0.1:9997/'
-        model_uid: 'qwen1.5-chat'
+        model_uid: 'qwen2-instruct'
     - model: 'bge-large-zh-v1.5'
       model_type: 'text-embedding'
       model_credentials:
