--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,12 +2,15 @@ version: '3.9'
 services:
   xinference:
     image: xprobe/xinference:v0.12.1
+    restart: always
     command: xinference-local -H 0.0.0.0
-    # ports:
+    # ports: # 不使用 host network 时可打开.
     #  - "9997:9997"
     network_mode: "host"
     volumes:
-      - ~/xinference:/root/.xinference # 将本地目录(/root/xinference/.xinference)挂载到容器目录(/root/.xinference)中, 详细见:https://inference.readthedocs.io/zh-cn/latest/getting_started/using_docker_image.html
+      # 将本地路径(~/xinference)挂载到容器路径(/root/.xinference)中,
+      # 详情见: https://inference.readthedocs.io/zh-cn/latest/getting_started/using_docker_image.html
+      - ~/xinference:/root/.xinference
       # - ~/xinference/cache/huggingface:/root/.cache/huggingface
       # - ~/xinference/cache/modelscope:/root/.cache/modelscope
     deploy:
@@ -20,9 +23,11 @@ services:
     runtime: nvidia
   chatchat:
     image: chatimage/chatchat:0.3.0-0622
-    # ports:
+    restart: always
+    # ports: # 不使用 host network 时可打开.
     #   - "7861:7861"
     #   - "8501:8501"
     network_mode: "host"
+    # 将本地路径(~/chatchat/data)挂载到容器默认数据路径(/usr/local/lib/python3.11/site-packages/chatchat/data)中
     # volumes:
-    #   - /root/chatchat/data:/usr/local/lib/python3.11/site-packages/chatchat/data
+    #   - ~/chatchat/data:/usr/local/lib/python3.11/site-packages/chatchat/data
