update image to chatimage/chatchat:0.3.0-0623 (#4283)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     apt-get install -y --no-install-recommends libgl1 libglib2.0-0 && \
     apt-get clean && \
     pip install openpyxl networkx faiss-cpu jq unstructured[pdf] opencv-python rapidocr-onnxruntime PyMuPDF rank_bm25 \
-    youtube_search && \
+    youtube_search python-docx && \
     pip install streamlit-chatbox==1.1.12.post4 && \
     rm -rf /var/lib/apt/lists/*
 # Install Chatchat
