--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -7,9 +7,9 @@ services:
     # ports: # 不使用 host network 时可打开.
     #  - "9997:9997"
     network_mode: "host"
+    # 将本地路径(~/xinference)挂载到容器路径(/root/.xinference)中,
+    # 详情见: https://inference.readthedocs.io/zh-cn/latest/getting_started/using_docker_image.html
     volumes:
-      # 将本地路径(~/xinference)挂载到容器路径(/root/.xinference)中,
-      # 详情见: https://inference.readthedocs.io/zh-cn/latest/getting_started/using_docker_image.html
       - ~/xinference:/root/.xinference
       # - ~/xinference/cache/huggingface:/root/.cache/huggingface
       # - ~/xinference/cache/modelscope:/root/.cache/modelscope
@@ -21,8 +21,11 @@ services:
               count: all
               capabilities: [gpu]
     runtime: nvidia
+    # 模型源更改为 ModelScope, 默认为 HuggingFace
+    # environment:
+    #   - XINFERENCE_MODEL_SRC=modelscope
   chatchat:
-    image: chatimage/chatchat:0.3.0-0623
+    image: chatimage/chatchat:0.3.0-0623-3
     restart: always
     # ports: # 不使用 host network 时可打开.
     #   - "7861:7861"
