--- a/libs/model-providers/tests/integration_tests/openai_providers_test/model_providers.yaml
+++ b/libs/model-providers/tests/integration_tests/openai_providers_test/model_providers.yaml
@@ -1,10 +1,19 @@
-
-ollama:
+openai:
   model_credential:
-    - model: 'llama3'
+    - model: 'gpt-3.5-turbo'
       model_type: 'llm'
       model_credentials:
-        openai_api_base: 'http://172.21.192.1:11434'
+        openai_api_key: 'sk-'
+        openai_organization: ''
+        openai_api_base: ''
+    - model: 'gpt-4'
+      model_type: 'llm'
+      model_credentials:
+        openai_api_key: 'sk-proj-'
+        openai_organization: ''
+        openai_api_base: ''
 
-
-
+  provider_credential:
+    openai_api_key: 'sk-proj-'
+    openai_organization: ''
+    openai_api_base: ''
