--- a/libs/chatchat-server/pyproject.toml
+++ b/libs/chatchat-server/pyproject.toml
@@ -34,11 +34,13 @@ jieba = "0.42.1"
 rank_bm25 = "0.2.2"
 # accelerate = "~0.24.1"
 # spacy = "~3.7.2"
+openpyxl = "3.1.4"
+networkx = "3.1"
+opencv-python = "4.10.0.84"
 PyMuPDF = "~1.23.16"
 rapidocr_onnxruntime = "~1.3.8"
 requests = "~2.31.0"
 pathlib = "~1.0.1"
-pytest = "~7.4.3"
 pyjwt = "~2.8.0"
 elasticsearch = "*"
 numexpr = ">=1" #test
@@ -77,38 +79,30 @@ extended_testing = [
     "beautifulsoup4",
     "bibtexparser",
     "cassio",
-    "chardet",
     "datasets",
     "google-cloud-documentai",
     "esprima",
-    "jq",
     "pdfminer-six",
     "pgvector",
     "pypdf",
-    "pymupdf",
     "pypdfium2",
-    "tqdm",
     "lxml",
     "atlassian-python-api",
     "mwparserfromhell",
     "mwxml",
     "msal",
-    "pandas",
     "telethon",
     "psychicapi",
     "gql",
     "gradientai",
     "requests-toolbelt",
     "html2text",
-    "numexpr",
     "py-trello",
     "scikit-learn",
-    "streamlit",
     "pyspark",
     "sympy",
     "rapidfuzz",
     "jsonschema",
-    "rank-bm25",
     "geopandas",
     "gitpython",
     "newspaper3k",
@@ -116,11 +110,9 @@ extended_testing = [
     "feedparser",
     "xata",
     "xmltodict",
-    "faiss-cpu",
     "openapi-pydantic",
     "arxiv",
     "sqlite-vss",
-    "rapidocr-onnxruntime",
     "motor",
     "timescale-vector",
     "anthropic",
