完成lobechat与chatchat对接第一版UI
---------

Co-authored-by: cca313 <cca313@gmail.com>
Co-authored-by: VLOU <919070296@qq.com>
Co-authored-by: wangzongming <wangzm@bjzxkj.com>

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # add a access code to lock your lobe-chat application, you can set a long password to avoid leaking. If this value contains a comma, it is a password array.
-#ACCESS_CODE=lobe66
+# ACCESS_CODE=lobe66
 
 # add your custom model name, multi model separate by comma. for example gpt-3.5-1106,gpt-4-1106
 # CUSTOM_MODELS=model1,model2,model3
@@ -14,7 +14,7 @@
 ########################################
 
 # you openai api key
-OPENAI_API_KEY=sk-xxxxxxxxx
+OPENAI_API_KEY = sk-xxxxxxxxx
 
 # use a proxy to connect to the OpenAI API
 # OPENAI_PROXY_URL=https://api.openai.com/v1
@@ -40,27 +40,27 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 ############ ZhiPu AI Service ##########
 ########################################
 
-#ZHIPU_API_KEY=xxxxxxxxxxxxxxxxxxx.xxxxxxxxxxxxx
+# ZHIPU_API_KEY=xxxxxxxxxxxxxxxxxxx.xxxxxxxxxxxxx
 
 ########################################
 ########## Moonshot AI Service #########
 ########################################
 
-#MOONSHOT_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# MOONSHOT_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ########### Google AI Service ##########
 ########################################
 
-#GOOGLE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# GOOGLE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ######### AWS Bedrock Service ##########
 ########################################
 
-#AWS_REGION=us-east-1
-#AWS_ACCESS_KEY_ID=xxxxxxxxxxxxxxxxxxx
-#AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=xxxxxxxxxxxxxxxxxxx
+# AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ######### Ollama AI Service ##########
@@ -73,19 +73,19 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 ########### Mistral AI Service ##########
 ########################################
 
-#MISTRAL_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# MISTRAL_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ######### Perplexity Service ##########
 ########################################
 
-#PERPLEXITY_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# PERPLEXITY_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ######### Anthropic Service ##########
 ########################################
 
-#ANTHROPIC_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# ANTHROPIC_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 ########################################
 ############ Market Service ############
@@ -97,6 +97,12 @@ OPENAI_API_KEY=sk-xxxxxxxxx
 ########################################
 ############ Plugin Service ############
 ########################################
+
+# you can use ChatChat.The local/remote ChatChat service url
+CHATCHAT_PROXY_URL = 'http://localhost:7861/v1'
+
+# Knowledge Base Service. Default as follows
+KNOWLEDGE_PROXY_URL = 'http://localhost:7861/knowledge_base'
 
 # The LobeChat plugins store index url
 # PLUGINS_INDEX_URL=https://chat-plugins.lobehub.com
