--- a/.github/workflows/_integration_test.yml
+++ b/.github/workflows/_integration_test.yml
@@ -18,17 +18,14 @@ jobs:
       run:
         working-directory: ${{ inputs.working-directory }}
     if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
     environment: Scheduled testing publish
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version:
-          - "3.8"
-          - "3.9"
-          - "3.10"
-          - "3.11"
-          - "3.12"
-    name: "make integration_test #${{ matrix.python-version }}"
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+
+    name: "make integration_test #${{ matrix.os }} Python ${{ matrix.python-version }}"
     steps:
         - uses: actions/checkout@v4
 
@@ -53,12 +50,25 @@ jobs:
           run: |
             make integration_tests
 
-        - name: Remove chatchat Test Untracked files
+
+        - name: Remove chatchat Test Untracked files (Linux/macOS)
+          if: runner.os != 'Windows'
           working-directory: ${{ inputs.working-directory }}
           run: |
-            rm -rf tests/unit_tests/config/chatchat/
+            if [ -d "tests/unit_tests/config/chatchat/" ]; then
+              rm -rf tests/unit_tests/config/chatchat/
+            fi
 
-        - name: Ensure the tests did not create any additional files
+        - name: Remove chatchat Test Untracked files (Windows)
+          if: runner.os == 'Windows'
+          working-directory: ${{ inputs.working-directory }}
+          run: |
+            if (Test-Path -Path "tests/unit_tests/config/chatchat/") {
+              Remove-Item -Recurse -Force "tests/unit_tests/config/chatchat/"
+            }
+
+        - name: Ensure the tests did not create any additional files (Linux/macOS)
+          if: runner.os != 'Windows'
           shell: bash
           run: |
             set -eu
@@ -69,3 +79,13 @@ jobs:
             # grep will exit non-zero if the target message isn't found,
             # and `set -e` above will cause the step to fail.
             echo "$STATUS" | grep 'nothing to commit, working tree clean'
+
+        - name: Ensure the tests did not create any additional files (Windows)
+          if: runner.os == 'Windows'
+          shell: powershell
+          run: |
+            $STATUS = git status
+            Write-Host $STATUS
+            
+            # Select-String will exit non-zero if the target message isn't found.
+            $STATUS | Select-String 'nothing to commit, working tree clean'
